--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start:prod": "node dist/main",
     "migrate": "KNEX_ENV=development knex migrate:latest",
     "proxy": "http://localhost:3000"
   },
