--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "twilio": "^4.19.0"
   },
   "scripts": {
+    "build": "npm build",
     "dev": "nodemon --exec ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:prod": "node dist/main",
