--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "npm build",
     "dev": "nodemon --exec ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:prod": "node dist/main",
+    "start ": "ts-node src/index.ts",
     "migrate": "KNEX_ENV=development knex migrate:latest",
     "proxy": "http://localhost:3000"
   },
