--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "build": "npm build",
-    "start": "nodemon --exec ts-node src/index.ts",
+    "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "KNEX_ENV=development knex migrate:latest",
     "proxy": "http://localhost:3000"
